Windows releases: Add Windows executable and documentation updates
- Add KintsugiStack WhackAMole Windows V0 release build
- Add WhackAMole.lnk Windows shortcut
- Add monty2.ico application icon
- Update README.md and README.pdf with Windows release information